fix : Aligned h3 to center

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -34,6 +34,10 @@ section {
   text-align: center;
 }
 
+h3 {
+  text-align: center;
+}
+
 .btn {
   display: inline-block;
   background-color: $teriary;
